# prefix_varint

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_u32.rs  decode_u32_io.rs  decode_u32_iter.rs  decode_u64.rs  encode_u32.rs  encode_u32_io.rs  encode_u32_iter.rs  encode_u64.rs
src/: bytes.rs  core.rs  io.rs  lib.rs  raw.rs  tests.rs
tests/: fuzz.rs
