[package]
name = "prefix_uvarint"
version = "0.5.0"
authors = ["Trevor McCulloch <mccullocht@gmail.com>"]
edition = "2021"
description = "Prefix based variable length integer coding."
license = "MIT OR Apache-2.0"
keywords = ["integer", "coding", "compression"]
categories = ["compression"]
repository = "https://github.com/mccullocht/prefix_varint"
homepage = "https://github.com/mccullocht/prefix_varint"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false
