[package]
name = "prefix_uvarint-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.prefix_uvarint]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "encode_u32"
path = "fuzz_targets/encode_u32.rs"
test = false
doc = false

[[bin]]
name = "encode_u32_io"
path = "fuzz_targets/encode_u32_io.rs"
test = false
doc = false

[[bin]]
name = "encode_u32_iter"
path = "fuzz_targets/encode_u32_iter.rs"
test = false
doc = false

[[bin]]
name = "decode_u32"
path = "fuzz_targets/decode_u32.rs"
test = false
doc = false

[[bin]]
name = "decode_u32_iter"
path = "fuzz_targets/decode_u32_iter.rs"
test = false
doc = false

[[bin]]
name = "decode_u32_io"
path = "fuzz_targets/decode_u32_io.rs"
test = false
doc = false

[[bin]]
name = "encode_u64"
path = "fuzz_targets/encode_u64.rs"
test = false
doc = false

[[bin]]
name = "decode_u64"
path = "fuzz_targets/decode_u64.rs"
test = false
doc = false
